# mind

./: .gitignore  404.html  README.md  index.html  sitemap.xml
api/: index.html
applications/: index.html
artifacts/: how_to_yale.md  readme.md
client_api/: index.html
contact/: index.html
contributing/: index.html
cpp_api/: index.html
cpp_client_api/: index.html
ctrl_scripts/: .gitignore  readme.md
data_archival/: index.html
docs/: .gitignore  CMakeCache.txt  CMakeLists.txt  DoxyfileCpp  DoxyfileCppClient  DoxyfileJavaClient  DoxyfilePyClient  Makefile  cmake_install.cmake  mkdocs.yml  mkdocs.yml.in
install/: index.html
java_client_api/: index.html
loading_data/: index.html
mind_linux/: .config  .gitignore  Makefile  build_kernel.sh  readme.md
mind_p4/: configure_p4_build.sh  readme.md  tna_disagg_egress.p4  tna_disagg_headers.p4  tna_disagg_ingress.p4  (+3 more)
mind_switch_ctrl/: Makefile.am  bf_rt_utils.hpp  dependencies.md  launch_disagg_switch.sh  readme.md  tna_disagg_api.cpp  tna_disagg_bfrt.cpp  tna_disagg_bfrt.hpp  tna_disagg_cache_state.cpp  tna_disagg_cacheline.cpp  tna_disagg_config.cpp  tna_disagg_switch.cpp
mind_switch_ctrl/controller/: cache_manager_thread.c  cache_manager_thread.h  cacheline_def.h  cacheline_manager.c  cacheline_manager.h  config.h  controller.c  controller.h  controller_tests.c  debug.c  debug.h  fault.h  ht_body.c  list_and_hash.h  memory_management.c  memory_management.h  memory_node_connect.c  mmap_ftns.c  mmap_unmapped_area.c  network_rdma.h  rbtree_ftns.c  rbtree_ftns.h  rbtree_lib.c  request_handler.c  request_handler.h  sys_x86_64.c  task_management.c  types.h  vm_flags.h
(+2817 files in other folders)
